--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="Autor" content="Dominic Burfeind">
   <meta name="Erstellungsdatum" content="06.03.24 13:37">
-  <link rel="stylesheet" href="/resources/css/index.css">
+  <link rel="stylesheet" href="index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
@@ -35,7 +35,6 @@
     <section class="gerichte" id="idGerichte">
       <h3>Unsere Gerichte</h3>
       <figure class="gerichte-figure gericht1" id="idGericht1">
-        <img src="" alt="">
         <figcaption>Speisen</figcaption>
       </figure>
       <p class="gerichte-text gerichte-text-1">
@@ -43,7 +42,7 @@
       </p>
 
       <figure class="gerichte-figure gericht2" id="idGericht2">
-        <img src="" alt="">
+
         <figcaption>Fleisch</figcaption>
       </figure>
       <p class="gerichte-text gerichte-text-2">
@@ -51,7 +50,6 @@
       </p>
 
       <figure class="gerichte-figure gericht3" id="idGericht3">
-        <img src="" alt="">
         <figcaption>Vegan</figcaption>
       </figure>
       <p class="gerichte-text gerichte-text-3">
@@ -116,7 +114,7 @@
 
     <section class="über-uns" id="idÜberUns">
       <figure class="über-uns-fig1">
-        <img src="/resources/img/tomatoes.jpg" alt="">
+        <img src="tomatoes.jpg" alt="">
         <figcaption>
           Trete ein in unsere gastronomische Oase, wo jeder Bissen eine Geschichte erzählt und jeder Gast wie ein Familienmitglied begrüßt wird
         </figcaption>
@@ -126,7 +124,7 @@
       </figure>
 
       <figure class="über-uns-fig2">
-        <img src="/resources/img/shrimps.jpg" alt="">
+        <img src="shrimps.jpg" alt="">
         <figcaption>
           In unserem Restaurant erwarten dich nicht nur exquisit zubereitete Speisen, sondern auch eine Atmosphäre voller Wärme und Herzlichkeit.
         </figcaption>
