--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Ω<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -128,9 +128,6 @@
         <figcaption>
           In unserem Restaurant erwarten dich nicht nur exquisit zubereitete Speisen, sondern auch eine Atmosphäre voller Wärme und Herzlichkeit.
         </figcaption>
-        <p>
-         Lass dich von unserer einladenden Atmosphäre verführen und entdecke, wie Essen zu einem Erlebnis wird, das weit über den Gaumen hinausgeht. Willkommen zu einer Reise voller Geschmacksexplosionen und unvergesslicher Augenblicke
-        </p>
       </figure>
     </section>
 
