--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Ω<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -26,7 +26,6 @@
       </ul>
     </nav>
     <h2>Die besten Gerichte aus dem Norden</h2>
-    <p>Zubereitet von 5 Sterne köchen</p>
     <a class="reservier-knopf" href="#idReservieren">Jetzt Tisch Reservieren</a>
   </header>
 
